--- a/api/config/packages/lexik_jwt_authentication.yaml
+++ b/api/config/packages/lexik_jwt_authentication.yaml
@@ -1,5 +1,6 @@
 lexik_jwt_authentication:
     secret_key: '%env(JWT_SECRET_KEY)%'
+    user_identity_field: email
     # token encoding/decoding settings
     encoder:
         # token encoder/decoder service - default implementation based on the lcobucci/jwt library
