--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -12,6 +12,17 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        login:
+        
+            pattern: ^/api/login
+            stateless: true
+            anonymous: true
+            json_login:
+                check_path: /api/login
+                username_path: email
+                password_path: password
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
         api:
             pattern: ^/api/
             stateless: true
@@ -20,10 +31,6 @@ security:
             guard:
                 authenticators:
                     - lexik_jwt_authentication.jwt_token_authenticator
-            json_login:
-                check_path: app_login
-                username_path: email
-                password_path: password
         main:
             anonymous: lazy
             provider: app_user_provider
