--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -16,4 +16,4 @@ COPY . .
 RUN npm run build
 
 EXPOSE 8080
-CMD [ "http-server", "dist" ]
+CMD [ "http-server", "-P", "http://localhost:8080?", "dist" ]
